Remove invalid homes and warps breaking iterators.
Resolves #269

--- a/src/main/resources/assets/nucleus/messages.properties
+++ b/src/main/resources/assets/nucleus/messages.properties
@@ -72,6 +72,9 @@ chat.url.malformed=Unable to parse the URL {0}, it will not be clickable.
 
 cooldown.message=&cYou can''t run this command for another &e{0}&c.
 
+general.warps.invalidremove=The warp {0} could not be parsed and has been discarded.
+user.homes.invalidremove=The home {0} for {1} could not be parsed and has been discarded.
+
 cost.complete=&aYou were charged &e{0}&a to run that command.
 cost.refund=&aYou were refunded &e{0}&a.
 cost.error=&cThe command could not be run due to an error with the Economy service.
